# loong-pixelgrab

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  pixelgrab.cfg.example
.github/workflows/: ci.yml  release.yml
docs/: BUILD.md  Doxyfile  RELEASE.md
examples/: CMakeLists.txt  main.cpp
examples/core/: app_defs.h  i18n.cpp  i18n.h  platform_hotkey.h  platform_http.h  platform_settings.h  update_checker.cpp  update_checker.h
examples/platform/linux/: linux_application.cpp  linux_application.h  linux_capture_overlay.cpp  linux_capture_overlay.h  linux_color_picker.cpp  linux_color_picker.h  linux_hotkey.cpp  linux_http.cpp  linux_i18n.cpp  linux_settings.cpp
examples/platform/macos/: mac_application.h  mac_application.mm  mac_color_picker.h  mac_color_picker.mm  mac_hotkey.mm  mac_http.mm  mac_i18n.mm  mac_settings.mm
examples/platform/windows/: win_app_defs.h  win_application.cpp  win_application.h  win_hotkey.cpp  win_hotkey.h  win_http.cpp  win_http.h  win_settings.cpp  win_settings.h
examples/platform/windows/capture/: annotation_manager.cpp  annotation_manager.h  color_picker.cpp  color_picker.h  f1_toolbar.cpp  f1_toolbar.h  overlay_manager.cpp  overlay_manager.h  pin_manager.cpp  pin_manager.h  selection_manager.cpp  selection_manager.h
examples/platform/windows/recording/: recording_manager.cpp  recording_manager.h
examples/platform/windows/resources/: app.rc
examples/platform/windows/tray/: about_dialog.cpp  about_dialog.h  settings_dialog.cpp  settings_dialog.h  tray_manager.cpp  tray_manager.h
include/pixelgrab/: pixelgrab.h  pixelgrab.hpp  version.h.in
scripts/: build_and_package.bat  bump_version.bat  release.bat  release.py
src/: CMakeLists.txt
src/annotation/: annotation_renderer.h  annotation_session.cpp  annotation_session.h  shape.h
src/core/: audio_backend.h  callback_sink.h  capture_backend.h  capture_history.cpp  capture_history.h  color_utils.cpp  color_utils.h  image.cpp  image.h  image_export.cpp  logger.cpp  logger.h  pixelgrab_api.cpp  pixelgrab_context.cpp  pixelgrab_context.h  recorder_backend.h
src/detection/: element_detector.h  snap_engine.cpp  snap_engine.h
src/ocr/: ocr_backend.h  ocr_stub.cpp  tesseract_ocr_backend.cpp
src/pin/: clipboard_reader.h  pin_window_backend.h  pin_window_manager.cpp  pin_window_manager.h
src/platform/linux/: x11_annotation_renderer.cpp  x11_annotation_renderer.h  x11_audio_backend.cpp  x11_capture_backend.cpp  x11_capture_backend.h  x11_clipboard.cpp  x11_clipboard.h  x11_element_detector.cpp  x11_element_detector.h  x11_ocr_backend.cpp  x11_pin_window.cpp  x11_pin_window.h  x11_recorder_backend.cpp  x11_translate_backend.cpp  x11_watermark_renderer.cpp
src/platform/macos/: mac_annotation_renderer.h  mac_annotation_renderer.mm  mac_audio_backend.mm  mac_capture_backend.h  mac_capture_backend.mm  mac_clipboard.h  mac_clipboard.mm  mac_element_detector.h  mac_element_detector.mm  mac_ocr_backend.mm  mac_pin_window.h  mac_pin_window.mm  mac_recorder_backend.mm  mac_translate_backend.mm  mac_watermark_renderer.mm
src/platform/windows/: d3d11_device_manager.cpp  d3d11_device_manager.h  win_annotation_renderer.cpp  win_annotation_renderer.h  win_audio_backend.cpp  win_capture_backend.cpp  win_capture_backend.h  win_clipboard.cpp  win_clipboard.h  win_element_detector.cpp  win_element_detector.h  win_ocr_backend.cpp  win_pin_window.cpp  win_pin_window.h  win_recorder_backend.cpp  win_translate_backend.cpp  win_watermark_renderer.cpp
src/translate/: translate_backend.cpp  translate_backend.h  translate_stub.cpp
src/watermark/: watermark_renderer.h
tests/: CMakeLists.txt  bench_capture.cpp  test_annotation.cpp  test_audio.cpp  test_color.cpp  test_context.cpp  test_detection_history.cpp  test_dpi.cpp  test_logging.cpp  test_ocr.cpp  test_pin_clipboard.cpp  test_recorder_watermark.cpp  test_screen_capture.cpp  test_translate.cpp  test_validation.cpp  test_version.cpp
